# efm32gg-hal

./: Cargo.toml  README.md
src/: cmu.rs  lib.rs  rtc.rs  watchdog.rs
src/gpio/: common.rs  efm32hg.rs  mod.rs
